se completo la tarea

--- a/M03_variablesydatos/Prep_Course_Homework_03.ipynb
+++ b/M03_variablesydatos/Prep_Course_Homework_03.ipynb
@@ -18,10 +18,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=5\n",
+    "print(x)"
+   ]
   },
   {
    "attachments": {},
@@ -33,10 +44,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(8.5))"
+   ]
   },
   {
    "attachments": {},
@@ -48,10 +69,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(x))"
+   ]
   },
   {
    "attachments": {},
@@ -63,10 +94,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mi_nombre = \"Luis\""
+   ]
   },
   {
    "attachments": {},
@@ -78,10 +111,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "num1= 4 + 4j  "
+   ]
   },
   {
    "attachments": {},
@@ -93,10 +128,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'complex'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(num1))"
+   ]
   },
   {
    "attachments": {},
@@ -108,10 +153,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "numPi = 3.1415"
+   ]
   },
   {
    "attachments": {},
@@ -123,10 +170,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "q = \"True\" #es un string\n",
+    "w = True  #es un boolean"
+   ]
   },
   {
    "attachments": {},
@@ -138,10 +188,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "<class 'bool'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(q))\n",
+    "print(type(w))"
+   ]
   },
   {
    "attachments": {},
@@ -153,10 +215,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "o = 7 + 7.6"
+   ]
   },
   {
    "attachments": {},
@@ -168,10 +232,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(7+7j)\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 4 + 3j\n",
+    "b = 3 + 4j\n",
+    "print(a+b)"
+   ]
   },
   {
    "attachments": {},
@@ -183,10 +259,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4+10j)\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = a + 7j\n",
+    "print(c)"
+   ]
   },
   {
    "attachments": {},
@@ -198,10 +285,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(5*5)"
+   ]
   },
   {
    "attachments": {},
@@ -213,10 +310,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "256\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(2**8)"
+   ]
   },
   {
    "attachments": {},
@@ -228,10 +335,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.75\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = 27 / 4\n",
+    "print(t)"
+   ]
   },
   {
    "attachments": {},
@@ -243,10 +361,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = 27//4\n",
+    "print(t)"
+   ]
   },
   {
    "attachments": {},
@@ -258,10 +387,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = 27 % 4\n",
+    "print(t)"
+   ]
   },
   {
    "attachments": {},
@@ -273,10 +413,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "4*6+3"
+   ]
   },
   {
    "attachments": {},
@@ -288,10 +441,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hola Carnalito\n"
+     ]
+    }
+   ],
+   "source": [
+    "alfa1= \"Hola\"\n",
+    "alfa2= \" Carnalito\"\n",
+    "print(alfa1+alfa2)"
+   ]
   },
   {
    "attachments": {},
@@ -303,10 +468,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"2\" == 2 "
+   ]
   },
   {
    "attachments": {},
@@ -318,10 +496,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(\"2\") == 2"
+   ]
   },
   {
    "attachments": {},
@@ -336,7 +527,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "por que el 3,8 es un str "
+   ]
   },
   {
    "attachments": {},
@@ -348,10 +541,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "g = 3 \n",
+    "g -= 1\n",
+    "print(g)"
+   ]
   },
   {
    "attachments": {},
@@ -363,10 +568,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1<<2\n",
+    "#La expresión resultado = 1 << 2 efectúa un desplazamiento de bits hacia la izquierda y guarda el resultado en la variable resultado. Lo que produce el número 4 como salida. \n",
+    "#es un sistema numerico que solo usa el 0 y el 1 no como el sistema numerico que estamos acostumbrados a usar que va del 0 al 9."
+   ]
   },
   {
    "attachments": {},
@@ -378,10 +598,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'22'"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2 + \"2\" #no se puede efectuar la operacion por que uno es un entero y el otro es un string \n",
+    "#si los dos fueran del mismo tipo arrojaria 4 al ser 2 + 2 ambos enteros o 22 siendo los dos strings\n"
+   ]
   },
   {
    "attachments": {},
@@ -393,10 +627,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mi novia tiene 28 años pero actua como una niña de 4 años\n"
+     ]
+    }
+   ],
+   "source": [
+    "var1= \"Mi novia tiene \"\n",
+    "var2= 28\n",
+    "var3= \"pero actua como una niña de \"\n",
+    "var4= 4\n",
+    "var5= \" años\"\n",
+    "print(var1+str(var2)+var5+\" \"+var3+str(var4)+var5)"
+   ]
   }
  ],
  "metadata": {
@@ -418,7 +667,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
