--- a/M04_flujosdecontrol/Prep_Course_Homework_04.ipynb
+++ b/M04_flujosdecontrol/Prep_Course_Homework_04.ipynb
@@ -18,10 +18,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Es mayor que 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "var1= 5\n",
+    "if var1 > 0:\n",
+    "    print (\"Es mayor que 0\")\n",
+    "elif var1<0:\n",
+    "    print(\"Es menor que 0\")\n",
+    "else:\n",
+    "    print(\"Es igual que 0\")"
+   ]
   },
   {
    "attachments": {},
@@ -36,7 +52,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "var_1= 1123\n",
+    "var_2= \"Olakease\"\n",
+    "if type(var_1) ==type(var_2):\n",
+    "    print(\"son el mismo tipo de variable\")\n",
+    "else:\n",
+    "    print(\"son diferentes variables\")"
+   ]
   },
   {
    "attachments": {},
@@ -51,7 +74,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for i in range(1,21):\n",
+    "    if i%2 ==0:\n",
+    "      print(f'el numero {i} es par')\n",
+    "    else:\n",
+    "      print(f'el numero {i} es impar')"
+   ]
   },
   {
    "attachments": {},
@@ -66,7 +95,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for i in range(0,6):\n",
+    "    print(f'Valor: {i} elevado a la tercera potencia {i**3}')"
+   ]
   },
   {
    "attachments": {},
@@ -81,7 +113,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "o = 7\n",
+    "for i in range (0,o):\n",
+    "   pass\n",
+    "print(i) "
+   ]
   },
   {
    "attachments": {},
@@ -96,7 +133,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "n = 5\n",
+    "if type(n) == int:\n",
+    "    if n > 0:\n",
+    "        factorial = 1\n",
+    "        while n > 1:\n",
+    "            factorial *= n\n",
+    "            n -= 1\n",
+    "        print(f'El factorial es {factorial}')\n",
+    "    else:\n",
+    "        print('La variable no es mayor a cero')\n",
+    "else:\n",
+    "    print('La variable no es un entero')"
+   ]
   },
   {
    "attachments": {},
@@ -111,7 +161,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "r = 0\n",
+    "while r < 3:\n",
+    "    print(f\"Iteración del ciclo while: {r}\")\n",
+    "    numbers = [1, 2, 3, 4, 5]\n",
+    "    for number in numbers:\n",
+    "        print(f\"  - Iteración del ciclo for: {number}\")\n",
+    "    r += 1"
+   ]
   },
   {
    "attachments": {},
@@ -126,7 +184,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "numbers = [1, 2, 3, 4]\n",
+    "for number in numbers:\n",
+    "    print(f\"Iteración del ciclo for: {number}\")\n",
+    "    contador = 0\n",
+    "    while contador < 3:\n",
+    "        print(f\"  - Iteración del ciclo while: {contador}\")\n",
+    "        contador += 1"
+   ]
   },
   {
    "attachments": {},
@@ -138,10 +204,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "11\n",
+      "13\n",
+      "17\n",
+      "19\n",
+      "23\n",
+      "29\n"
+     ]
+    }
+   ],
+   "source": [
+    "limite = 30\n",
+    "i = 0\n",
+    "primo = True\n",
+    "while (i < limite):\n",
+    "    for ejm in range (2,i):\n",
+    "        if (i % ejm == 0):\n",
+    "            primo = False\n",
+    "    if (primo):\n",
+    "            print(i)\n",
+    "    else:\n",
+    "            primo=True\n",
+    "    i += 1"
+   ]
   },
   {
    "attachments": {},
@@ -153,10 +251,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "11\n",
+      "13\n",
+      "17\n",
+      "19\n",
+      "23\n",
+      "29\n"
+     ]
+    }
+   ],
+   "source": [
+    "limite = 30\n",
+    "i = 0\n",
+    "while (i < limite): \n",
+    "    primo = True\n",
+    "    if i < 2: \n",
+    "        primo = False\n",
+    "    for div in range(2, i):\n",
+    "        if (i % div == 0):\n",
+    "            primo = False\n",
+    "            break  \n",
+    "    if (primo):\n",
+    "        print(i)\n",
+    "    i += 1"
+   ]
   },
   {
    "attachments": {},
@@ -171,7 +300,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#El uso de break hace que el código sea más eficiente, ya que deja de verificar divisores tan pronto como encuentra uno."
+   ]
   },
   {
    "attachments": {},
@@ -183,10 +314,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "108 es divisible entre 12\n",
+      "120 es divisible entre 12\n",
+      "132 es divisible entre 12\n",
+      "144 es divisible entre 12\n",
+      "156 es divisible entre 12\n",
+      "168 es divisible entre 12\n",
+      "180 es divisible entre 12\n",
+      "192 es divisible entre 12\n",
+      "204 es divisible entre 12\n",
+      "216 es divisible entre 12\n",
+      "228 es divisible entre 12\n",
+      "240 es divisible entre 12\n",
+      "252 es divisible entre 12\n",
+      "264 es divisible entre 12\n",
+      "276 es divisible entre 12\n",
+      "288 es divisible entre 12\n",
+      "300 es divisible entre 12\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 99\n",
+    "while (i <= 300):\n",
+    "        i += 1 \n",
+    "        if (i % 12 != 0):\n",
+    "            continue\n",
+    "        print(f'{i} es divisible entre 12')\n",
+    "            "
+   ]
   },
   {
    "attachments": {},
@@ -198,10 +361,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "¿Desea encontrar el siguiente número primo? (1 para sí, cualquier otro para no)\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 1\n",
+    "sigue = 1\n",
+    "\n",
+    "while (sigue == 1):\n",
+    "    primo = True \n",
+    "    if n < 2:  \n",
+    "        primo = False\n",
+    "    else:\n",
+    "        for div in range(2, int(n**0.5) + 1):\n",
+    "            if n % div == 0:\n",
+    "                primo = False\n",
+    "                break\n",
+    "    \n",
+    "    if primo:\n",
+    "        print(n)\n",
+    "        print('¿Desea encontrar el siguiente número primo? (1 para sí, cualquier otro para no)')\n",
+    "        if input() != '1':\n",
+    "            print('Se finaliza el proceso')\n",
+    "            break\n",
+    "    n += 1"
+   ]
   },
   {
    "attachments": {},
@@ -213,10 +406,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El numero es 102\n"
+     ]
+    }
+   ],
+   "source": [
+    "u= 100\n",
+    "while(u<=300):\n",
+    "    if (u % 6 == 0):\n",
+    "        print(f'El numero es {u}')\n",
+    "        break\n",
+    "    u+=1"
+   ]
   }
  ],
  "metadata": {
@@ -238,7 +446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
