--- a/M05_estructuradedatos/Prep_Course_Homework_05.ipynb
+++ b/M05_estructuradedatos/Prep_Course_Homework_05.ipynb
@@ -18,10 +18,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Bogota', 'Medellin', 'Ciudad de mexico', 'Brazilia', 'Buenos aires']\n"
+     ]
+    }
+   ],
+   "source": [
+    "cities =['Bogota', 'Medellin','Ciudad de mexico' , 'Brazilia' , 'Buenos aires']\n",
+    "print(cities)"
+   ]
   },
   {
    "attachments": {},
@@ -33,10 +44,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Medellin\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cities[1])"
+   ]
   },
   {
    "attachments": {},
@@ -48,10 +69,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Medellin', 'Ciudad de mexico', 'Brazilia']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cities[1:4])"
+   ]
   },
   {
    "attachments": {},
@@ -63,10 +94,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(cities))"
+   ]
   },
   {
    "attachments": {},
@@ -78,10 +119,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Ciudad de mexico', 'Brazilia', 'Buenos aires']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cities[2:])"
+   ]
   },
   {
    "attachments": {},
@@ -93,10 +144,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Bogota', 'Medellin', 'Ciudad de mexico', 'Brazilia']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cities[:4])"
+   ]
   },
   {
    "attachments": {},
@@ -108,10 +169,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Bogota', 'Medellin', 'Ciudad de mexico', 'Brazilia', 'Buenos aires', 'Bogota', 'Barranquilla', 'Bogota', 'Barranquilla']\n"
+     ]
+    }
+   ],
+   "source": [
+    "cities.append('Bogota')\n",
+    "cities.append('Barranquilla')\n",
+    "print(cities)"
+   ]
   },
   {
    "attachments": {},
@@ -123,10 +196,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Bogota', 'Medellin', 'Ciudad de mexico', 'Cali', 'Brazilia', 'Buenos aires', 'Bogota', 'Barranquilla', 'Bogota', 'Barranquilla']\n"
+     ]
+    }
+   ],
+   "source": [
+    "cities.insert(3,'Cali')\n",
+    "print(cities)"
+   ]
   },
   {
    "attachments": {},
@@ -138,10 +222,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Bogota', 'Medellin', 'Ciudad de mexico', 'Cali', 'Brazilia', 'Buenos aires', 'Bogota', 'Barranquilla', 'Bogota', 'Barranquilla', 'Santa Marta', 'Pasto', 'Leticia']\n"
+     ]
+    }
+   ],
+   "source": [
+    "cities.extend (['Santa Marta', 'Pasto', 'Leticia'])\n",
+    "print(cities)"
+   ]
   },
   {
    "attachments": {},
@@ -153,10 +248,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cities.index('Bogota'))"
+   ]
   },
   {
    "attachments": {},
@@ -168,10 +273,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "'Madrid' is not in list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[39], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mcities\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mindex\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mMadrid\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m)\n",
+      "\u001b[1;31mValueError\u001b[0m: 'Madrid' is not in list"
+     ]
+    }
+   ],
+   "source": [
+    "print(cities.index('Madrid'))"
+   ]
   },
   {
    "attachments": {},
@@ -183,10 +302,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Medellin', 'Ciudad de mexico', 'Cali', 'Brazilia', 'Buenos aires', 'Barranquilla', 'Bogota', 'Barranquilla', 'Santa Marta', 'Pasto', 'Leticia']\n"
+     ]
+    }
+   ],
+   "source": [
+    "cities.remove('Bogota')\n",
+    "print(cities)"
+   ]
   },
   {
    "attachments": {},
@@ -198,10 +328,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "list.remove(x): x not in list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[42], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mcities\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mremove\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mTolima\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(cities)\n",
+      "\u001b[1;31mValueError\u001b[0m: list.remove(x): x not in list"
+     ]
+    }
+   ],
+   "source": [
+    "cities.remove('Tolima')\n",
+    "print(cities)"
+   ]
   },
   {
    "attachments": {},
@@ -213,10 +358,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pasto\n"
+     ]
+    }
+   ],
+   "source": [
+    "ultimo=cities.pop()\n",
+    "print(ultimo)"
+   ]
   },
   {
    "attachments": {},
@@ -228,10 +384,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Medellin', 'Ciudad de mexico', 'Cali', 'Brazilia', 'Buenos aires', 'Barranquilla', 'Bogota', 'Barranquilla', 'Santa Marta', 'Medellin', 'Ciudad de mexico', 'Cali', 'Brazilia', 'Buenos aires', 'Barranquilla', 'Bogota', 'Barranquilla', 'Santa Marta', 'Medellin', 'Ciudad de mexico', 'Cali', 'Brazilia', 'Buenos aires', 'Barranquilla', 'Bogota', 'Barranquilla', 'Santa Marta', 'Medellin', 'Ciudad de mexico', 'Cali', 'Brazilia', 'Buenos aires', 'Barranquilla', 'Bogota', 'Barranquilla', 'Santa Marta']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cities*4)"
+   ]
   },
   {
    "attachments": {},
@@ -243,10 +409,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n",
+      "(1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20)\n"
+     ]
+    }
+   ],
+   "source": [
+    "W=(1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20)\n",
+    "print(type(W))\n",
+    "print(W)"
+   ]
   },
   {
    "attachments": {},
@@ -258,10 +437,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(11, 12, 13, 14, 15)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(W[10:15])"
+   ]
   },
   {
    "attachments": {},
@@ -273,10 +462,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(20 in W)\n",
+    "print(30 in W)"
+   ]
   },
   {
    "attachments": {},
@@ -288,10 +489,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "el elemento Paris ya se existe\n"
+     ]
+    }
+   ],
+   "source": [
+    "estado = 'Paris'\n",
+    "if estado in cities:\n",
+    "    print(f'el elemento {estado} ya se existe')\n",
+    "else:\n",
+    "    cities.append(estado)\n",
+    "    print(f'se anexo el elemento {estado}')"
+   ]
   },
   {
    "attachments": {},
@@ -303,10 +519,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(W.count(15))\n",
+    "print(cities.count('Barranquilla'))"
+   ]
   },
   {
    "attachments": {},
@@ -318,10 +546,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]\n",
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "  new_one = list(W)\n",
+    "print(new_one)\n",
+    "print(type(new_one))  "
+   ]
   },
   {
    "attachments": {},
@@ -333,10 +574,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "c1, c2, c3, _, _, _, _, _, _, _, _, _, _, _, _, _, _, _, _, _ = W\n",
+    "print(c1)\n",
+    "print(c2)\n",
+    "print(c3)"
+   ]
   },
   {
    "attachments": {},
@@ -348,10 +604,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'ciudad': ['Medellin', 'Ciudad de mexico', 'Cali', 'Brazilia', 'Buenos aires', 'Barranquilla', 'Bogota', 'Barranquilla', 'Santa Marta', 'Paris'], 'Pais': ['Colombia', 'Mexico', 'Brazil', 'Argentina'], 'continente': ['america', 'europa', 'asia']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dicci = { 'ciudad': cities,\n",
+    "         'Pais': ['Colombia', 'Mexico', 'Brazil', 'Argentina'],\n",
+    "         'continente': ['america', 'europa', 'asia']}\n",
+    "print(dicci)"
+   ]
   },
   {
    "attachments": {},
@@ -363,10 +632,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['ciudad', 'Pais', 'continente'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dicci.keys())"
+   ]
   },
   {
    "attachments": {},
@@ -378,10 +657,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Medellin', 'Ciudad de mexico', 'Cali', 'Brazilia', 'Buenos aires', 'Barranquilla', 'Bogota', 'Barranquilla', 'Santa Marta', 'Paris']\n",
+      "['Colombia', 'Mexico', 'Brazil', 'Argentina']\n",
+      "['america', 'europa', 'asia']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dicci['ciudad'])\n",
+    "print(dicci['Pais'])\n",
+    "print(dicci['continente'])"
+   ]
   }
  ],
  "metadata": {
@@ -403,7 +696,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
