--- a/M06_iterablesiteradores/Prep_Course_Homework_06.ipynb
+++ b/M06_iterablesiteradores/Prep_Course_Homework_06.ipynb
@@ -18,10 +18,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-15, -14, -13, -12, -11, -10, -9, -8, -7, -6, -5, -4, -3, -2, -1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "vacia=[]\n",
+    "i= -15\n",
+    "while (i < 0):\n",
+    "    vacia.append(i)\n",
+    "    i+=1\n",
+    "print(vacia)"
+   ]
   },
   {
    "attachments": {},
@@ -33,10 +48,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-14\n",
+      "-12\n",
+      "-10\n",
+      "-8\n",
+      "-6\n",
+      "-4\n",
+      "-2\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=0\n",
+    "while (x < len(vacia)):\n",
+    "    if vacia[x] %2==0:\n",
+    "      print(vacia[x])\n",
+    "    x+=1\n",
+    "   "
+   ]
   },
   {
    "attachments": {},
@@ -48,10 +84,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-14\n",
+      "-12\n",
+      "-10\n",
+      "-8\n",
+      "-6\n",
+      "-4\n",
+      "-2\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=0\n",
+    "for elemento in vacia:\n",
+    "    if elemento %2==0:\n",
+    "        print(elemento)"
+   ]
   },
   {
    "attachments": {},
@@ -63,10 +118,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-15\n",
+      "-14\n",
+      "-13\n"
+     ]
+    }
+   ],
+   "source": [
+    "for elemento in vacia[:3]:\n",
+    "    print(elemento)"
+   ]
   },
   {
    "attachments": {},
@@ -78,10 +146,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 -15\n",
+      "1 -14\n",
+      "2 -13\n",
+      "3 -12\n",
+      "4 -11\n",
+      "5 -10\n",
+      "6 -9\n",
+      "7 -8\n",
+      "8 -7\n",
+      "9 -6\n",
+      "10 -5\n",
+      "11 -4\n",
+      "12 -3\n",
+      "13 -2\n",
+      "14 -1\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i,e in enumerate(vacia): \n",
+    "    print(i,e)"
+   ]
   },
   {
    "attachments": {},
@@ -93,10 +186,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista=[1,2,5,7,8,10,13,14,15,17,20]\n",
+    "m = 1 \n",
+    "while m < 20:\n",
+    "    if not(m in lista):\n",
+    "        lista.insert(m-1, m)\n",
+    "    m+=1    \n",
+    "print(lista)\n",
+    "    "
+   ]
   },
   {
    "attachments": {},
@@ -112,10 +222,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377, 610, 987, 1597, 2584, 4181, 6765, 10946, 17711, 28657, 46368, 75025, 121393, 196418, 317811, 514229]\n"
+     ]
+    }
+   ],
+   "source": [
+    "fib = [0, 1]  \n",
+    "d = 2 \n",
+    "\n",
+    "while d < 30:  \n",
+    "    fib.append(fib[d - 1] + fib[d - 2]) \n",
+    "    d += 1 \n",
+    "\n",
+    "print(fib)"
+   ]
   },
   {
    "attachments": {},
@@ -127,10 +254,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1346268\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sum(fib))"
+   ]
   },
   {
    "attachments": {},
@@ -149,10 +286,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.6176470588235294\n",
+      "1.6181818181818182\n",
+      "1.6179775280898876\n",
+      "1.6180555555555556\n",
+      "1.6180257510729614\n"
+     ]
+    }
+   ],
+   "source": [
+    "primeros= 15 \n",
+    "n = primeros-5\n",
+    "while n <primeros:\n",
+    "    n_1= fib[n]\n",
+    "    n_2= fib[n-1]\n",
+    "    cociente= n_1/n_2\n",
+    "    print(cociente)\n",
+    "    n += 1"
+   ]
   },
   {
    "attachments": {},
@@ -165,10 +323,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "21\n",
+      "39\n",
+      "60\n",
+      "67\n"
+     ]
+    }
+   ],
+   "source": [
+    "cadena = 'Hola Mundo. Esto es una practica del lenguaje de programación Python'\n",
+    "\n",
+    "for indice, valor in enumerate(cadena):\n",
+    "    if valor == 'n':\n",
+    "        print(indice)"
+   ]
   },
   {
    "attachments": {},
@@ -180,10 +356,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ciudad\n",
+      "pais\n",
+      "continente\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_lista_ciudades=[\"buenos aires\", \"caracas\", \"bogota\"]\n",
+    "mi_lista_paises= [\"argentina\", \"venezuela\", \"colombia\"]\n",
+    "mi_lista_continentes=[\"america\", \"america\", \"america\"]\n",
+    "mi_dict={\"ciudad\": mi_lista_ciudades, \"pais\":mi_lista_paises, \"continente\":mi_lista_continentes}\n",
+    "for clave in mi_dict:\n",
+    "    print(clave)"
+   ]
   },
   {
    "attachments": {},
@@ -195,10 +388,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['H', 'o', 'l', 'a', ' ', 'M', 'u', 'n', 'd', 'o', '.', ' ', 'E', 's', 't', 'o', ' ', 'e', 's', ' ', 'u', 'n', 'a', ' ', 'p', 'r', 'a', 'c', 't', 'i', 'c', 'a', ' ', 'd', 'e', 'l', ' ', 'l', 'e', 'n', 'g', 'u', 'a', 'j', 'e', ' ', 'd', 'e', ' ', 'p', 'r', 'o', 'g', 'r', 'a', 'm', 'a', 'c', 'i', 'ó', 'n', ' ', 'P', 'y', 't', 'h', 'o', 'n']\n",
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cadena)\n",
+    "print(type(cadena))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "['H', 'o', 'l', 'a', ' ', 'M', 'u', 'n', 'd', 'o', '.', ' ', 'E', 's', 't', 'o', ' ', 'e', 's', ' ', 'u', 'n', 'a', ' ', 'p', 'r', 'a', 'c', 't', 'i', 'c', 'a', ' ', 'd', 'e', 'l', ' ', 'l', 'e', 'n', 'g', 'u', 'a', 'j', 'e', ' ', 'd', 'e', ' ', 'p', 'r', 'o', 'g', 'r', 'a', 'm', 'a', 'c', 'i', 'ó', 'n', ' ', 'P', 'y', 't', 'h', 'o', 'n']\n"
+     ]
+    }
+   ],
+   "source": [
+    "cadena=list(cadena)\n",
+    "print(type(cadena))\n",
+    "print(cadena)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H\n",
+      "o\n",
+      "l\n",
+      "a\n",
+      " \n",
+      "M\n",
+      "u\n",
+      "n\n",
+      "d\n",
+      "o\n",
+      ".\n",
+      " \n",
+      "E\n",
+      "s\n",
+      "t\n",
+      "o\n",
+      " \n",
+      "e\n",
+      "s\n",
+      " \n",
+      "u\n",
+      "n\n",
+      "a\n",
+      " \n",
+      "p\n",
+      "r\n",
+      "a\n",
+      "c\n",
+      "t\n",
+      "i\n",
+      "c\n",
+      "a\n",
+      " \n",
+      "d\n",
+      "e\n",
+      "l\n",
+      " \n",
+      "l\n",
+      "e\n",
+      "n\n",
+      "g\n",
+      "u\n",
+      "a\n",
+      "j\n",
+      "e\n",
+      " \n",
+      "d\n",
+      "e\n",
+      " \n",
+      "p\n",
+      "r\n",
+      "o\n",
+      "g\n",
+      "r\n",
+      "a\n",
+      "m\n",
+      "a\n",
+      "c\n",
+      "i\n",
+      "ó\n",
+      "n\n",
+      " \n",
+      "P\n",
+      "y\n",
+      "t\n",
+      "h\n",
+      "o\n",
+      "n\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_iterador= iter(cadena)\n",
+    "longitud=len(cadena)\n",
+    "for indice in range(0,longitud):\n",
+    " print(next(mi_iterador))"
+   ]
   },
   {
    "attachments": {},
@@ -210,10 +522,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<zip object at 0x000002613B619080>\n",
+      "[('uno', 1), ('dos', 2), ('tres', 3)]\n",
+      "<class 'zip'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_lista_1= [\"uno\", \"dos\", \"tres\"]\n",
+    "mi_lista_2= [1,2,3]\n",
+    "lista_zip= zip(mi_lista_1,mi_lista_2)\n",
+    "print(lista_zip)\n",
+    "print(list(lista_zip))\n",
+    "print(type(lista_zip))"
+   ]
   },
   {
    "attachments": {},
@@ -226,10 +555,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[21, 35, 42, 56, 63, 84, 91]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lis = [18,21,29,32,35,42,56,60,63,71,84,90,91,100]\n",
+    "lis2=[i for i in lis if i % 7 == 0]\n",
+    "print(lis2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[18, 21, 29, 32, 35, 42, 56, 60, 63, 71, 84, 90, 91, 100]\n",
+      "[21, 35, 42, 56, 63, 84, 91]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lis = [18,21,29,32,35,42,56,60,63,71,84,90,91,100]\n",
+    "lis3= []\n",
+    "for numero in lis:\n",
+    "    if numero % 7 == 0:\n",
+    "        lis3.append(numero)\n",
+    "print(lis)\n",
+    "print(lis3)"
+   ]
   },
   {
    "attachments": {},
@@ -242,10 +607,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lis = [[1,2,3,4],'rojo','verde',[True,False,False],['uno','dos','tres']]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(lis)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "la cantidad de elementos es 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "cantidad_elementos= 0\n",
+    "for elemento in lis:\n",
+    "    if type(elemento)==lis:\n",
+    "        cantidad_elementos += len(elemento)\n",
+    "    else:\n",
+    "        cantidad_elementos+=1\n",
+    "print(f'la cantidad de elementos es {cantidad_elementos}')"
+   ]
   },
   {
    "attachments": {},
@@ -257,10 +667,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lis = [[1,2,3,4],'rojo','verde',[True,False,False],['uno','dos','tres']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 2, 3, 4], ['rojo'], ['verde'], [True, False, False], ['uno', 'dos', 'tres']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for indice, elemento in enumerate(lis):\n",
+    "    if type(elemento) != list:  \n",
+    "        lis[indice] = [elemento] \n",
+    "\n",
+    "print(lis)"
+   ]
   }
  ],
  "metadata": {
@@ -282,7 +715,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
