--- a/M07_funciones/Prep_Course_Homework_07.ipynb
+++ b/M07_funciones/Prep_Course_Homework_07.ipynb
@@ -18,10 +18,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def verifica_primo(nro):\n",
+    "    es_primo=True\n",
+    "    for i in range(2,nro):\n",
+    "        if nro % i ==0:\n",
+    "            es_primo=False\n",
+    "            break\n",
+    "    return es_primo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "verifica_primo(8)"
+   ]
   },
   {
    "attachments": {},
@@ -33,10 +61,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def extrae_primos_de_lista(lista):\n",
+    "    lista_primos=[]\n",
+    "    for elemento in lista:\n",
+    "        if verifica_primo(int(elemento)):\n",
+    "            lista_primos.append(elemento)\n",
+    "    return lista_primos\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mi_lista = [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 5, 7, 11, 13, 17, 19]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "extrae_primos_de_lista(mi_lista)"
+   ]
   },
   {
    "attachments": {},
@@ -48,10 +112,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def valor_modal(lista):\n",
+    "    lista_unicos= []\n",
+    "    lista_repeticiones=[]\n",
+    "    if len(lista)==0:\n",
+    "        return None\n",
+    "    for elemento in lista:\n",
+    "        if elemento in lista_unicos:\n",
+    "            i = lista_unicos.index(elemento)\n",
+    "            lista_repeticiones[i] += 1 \n",
+    "        else:\n",
+    "            lista_unicos.append(elemento)\n",
+    "            lista_repeticiones.append(1)\n",
+    "    moda=lista_unicos[0]\n",
+    "    maximo=lista_repeticiones[0]\n",
+    "    for i, elemento in enumerate(lista_unicos):\n",
+    "        if lista_repeticiones[i]>maximo:\n",
+    "            moda=lista_unicos[i]\n",
+    "            maximo=lista_repeticiones[i]\n",
+    "    return moda, maximo\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mi_lista1=[1,1,1,2,2,2,3,4,5,6,7,8,9]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 3)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "valor_modal(mi_lista1)"
+   ]
   },
   {
    "attachments": {},
@@ -66,10 +180,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def conversion_grados(valor, origen, destino):\n",
+    "    if origen == 'celsius':\n",
+    "        if destino == 'celsius':\n",
+    "            valor_destino = valor \n",
+    "        elif destino == 'farenheit':\n",
+    "            valor_destino = (valor * 9 / 5) + 32  \n",
+    "        elif destino == 'kelvin':\n",
+    "            valor_destino = valor + 273.15  \n",
+    "        else:\n",
+    "            print('Parámetro de Destino incorrecto')  \n",
+    "    elif origen == 'farenheit':\n",
+    "        if destino == 'celsius':\n",
+    "            valor_destino = (valor - 32) * 5 / 9  \n",
+    "        elif destino == 'farenheit':\n",
+    "            valor_destino = valor  \n",
+    "        elif destino == 'kelvin':\n",
+    "            valor_destino = ((valor - 32) * 5 / 9) + 273.15 \n",
+    "        else:\n",
+    "            print('Parámetro de Destino incorrecto') \n",
+    "    elif origen == 'kelvin':\n",
+    "        if destino == 'celsius':\n",
+    "            valor_destino = valor - 273.15 \n",
+    "        elif destino == 'farenheit':\n",
+    "            valor_destino = ((valor - 273.15) * 9 / 5) + 32  \n",
+    "        elif destino == 'kelvin':\n",
+    "            valor_destino = valor  \n",
+    "        else:\n",
+    "            print('Parámetro de Destino incorrecto')  \n",
+    "    else:\n",
+    "        print('Parámetro de Origen incorrecto')  \n",
+    "    \n",
+    "    return valor_destino"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 grado Celsius a Celsius: 1\n",
+      "1 grado Celsius a Kelvin: 274.15\n",
+      "1 grado Celsius a Farenheit: 33.8\n",
+      "1 grado Kelvin a Celsius: -272.15\n",
+      "1 grado Kelvin a Kelvin: 1\n",
+      "1 grado Kelvin a Farenheit: -457.87\n",
+      "1 grado Farenheit a Celsius: -17.22222222222222\n",
+      "1 grado Farenheit a Kelvin: 255.92777777777775\n",
+      "1 grado Farenheit a Farenheit: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('1 grado Celsius a Celsius:', conversion_grados(1, 'celsius', 'celsius'))\n",
+    "print('1 grado Celsius a Kelvin:', conversion_grados(1, 'celsius', 'kelvin'))\n",
+    "print('1 grado Celsius a Farenheit:', conversion_grados(1, 'celsius', 'farenheit'))\n",
+    "print('1 grado Kelvin a Celsius:', conversion_grados(1, 'kelvin', 'celsius'))\n",
+    "print('1 grado Kelvin a Kelvin:', conversion_grados(1, 'kelvin', 'kelvin'))\n",
+    "print('1 grado Kelvin a Farenheit:', conversion_grados(1, 'kelvin', 'farenheit'))\n",
+    "print('1 grado Farenheit a Celsius:', conversion_grados(1, 'farenheit', 'celsius'))\n",
+    "print('1 grado Farenheit a Kelvin:', conversion_grados(1, 'farenheit', 'kelvin'))\n",
+    "print('1 grado Farenheit a Farenheit:', conversion_grados(1, 'farenheit', 'farenheit'))"
+   ]
   },
   {
    "attachments": {},
@@ -81,10 +261,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 grado celsius a celsius : 1.0\n",
+      "1 grado celsius a kelvin : 274.15\n",
+      "1 grado celsius a farenheit : 33.8\n",
+      "1 grado kelvin a celsius : -272.15\n",
+      "1 grado kelvin a kelvin : 1.0\n",
+      "1 grado kelvin a farenheit : -457.87\n",
+      "1 grado farenheit a celsius : -17.22222222222222\n",
+      "1 grado farenheit a kelvin : 255.92777777777775\n",
+      "1 grado farenheit a farenheit : 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "metricas = ['celsius','kelvin','farenheit']\n",
+    "for i in range(0,3):\n",
+    "    for j in range(0,3):\n",
+    "        print('1 grado',metricas[i],'a',metricas[j],':',conversion_grados(1.,metricas[i],metricas[j]))"
+   ]
   },
   {
    "attachments": {},
@@ -96,10 +297,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def factorial(numero):\n",
+    "    if (type(numero) != int):\n",
+    "        return 'el numero debe ser un entero'\n",
+    "    if(numero<0):\n",
+    "        return 'el numero debe ser positivo'\n",
+    "    if (numero>1):\n",
+    "        numero = numero*factorial(numero-1)\n",
+    "    return numero"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "factorial(5)"
+   ]
   }
  ],
  "metadata": {
@@ -121,7 +351,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
