--- a/M08_clasesyOOP/Prep_Course_Homework_08.ipynb
+++ b/M08_clasesyOOP/Prep_Course_Homework_08.ipynb
@@ -21,10 +21,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Vehiculo:\n",
+    "    def __init__(self, color, tipo, cilindrada):\n",
+    "        self.color= color\n",
+    "        self.tipo=tipo\n",
+    "        self.cilindrada=cilindrada"
+   ]
   },
   {
    "attachments": {},
@@ -39,10 +45,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Vehiculo:\n",
+    "    def __init__(self, color, tipo, cilindrada):\n",
+    "        self.color = color\n",
+    "        self.tipo = tipo\n",
+    "        self.cilindrada = cilindrada\n",
+    "        self.velocidad = 0\n",
+    "        self.direccion = 0\n",
+    "\n",
+    "    def acelerar(self,vel):\n",
+    "      self.velocidad += vel\n",
+    "         \n",
+    "    def frenar(self,vel):\n",
+    "       self.velocidad-= vel\n",
+    "\n",
+    "    def doblar(self,grados):\n",
+    "       self.direccion += grados"
+   ]
   },
   {
    "attachments": {},
@@ -54,10 +77,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a1 = Vehiculo(\"rojo\", \"carro\", 2)\n",
+    "a2 = Vehiculo(\"verde\", \"camion\", 5)\n",
+    "a3 = Vehiculo(\"negra\", \"moto\", 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a1.acelerar(60)\n",
+    "a2.acelerar(10)\n",
+    "a3.acelerar(20)\n",
+    "a1.frenar(40)\n",
+    "a2.frenar(10)\n",
+    "a3.doblar(5)\n"
+   ]
   },
   {
    "attachments": {},
@@ -69,10 +110,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Vehiculo:\n",
+    "    def __init__(self, color, tipo, cilindrada):\n",
+    "        self.color = color\n",
+    "        self.tipo = tipo\n",
+    "        self.cilindrada = cilindrada\n",
+    "        self.velocidad = 0\n",
+    "        self.direccion = 0\n",
+    "\n",
+    "    def acelerar(self,vel):\n",
+    "      self.velocidad += vel\n",
+    "         \n",
+    "    def frenar(self,vel):\n",
+    "       self.velocidad-= vel\n",
+    "\n",
+    "    def doblar(self,grados):\n",
+    "       self.direccion += grados\n",
+    "    def estado(self):\n",
+    "       print('velocidad actual: ',self.velocidad,',Direccion actual: ',self.direccion)\n",
+    "    def Detalle (self):\n",
+    "       print(f'soy un {self.tipo} de color {self.color} con un cilindraje de {self.cilindrada} litros')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a1 = Vehiculo(\"rojo\", \"carro\", 2)\n",
+    "a2 = Vehiculo(\"verde\", \"camion\", 5)\n",
+    "a3 = Vehiculo(\"negra\", \"moto\", 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "velocidad actual:  20 ,Direccion actual:  0\n"
+     ]
+    }
+   ],
+   "source": [
+    "a1.estado()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "soy un carro de color rojo con un cilindraje de 2 litros\n"
+     ]
+    }
+   ],
+   "source": [
+    "a1.Detalle()"
+   ]
   },
   {
    "attachments": {},
@@ -88,10 +195,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Herramientas:\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "\n",
+    "    def verifica_primo(self, nro):\n",
+    "        es_primo = True\n",
+    "        for i in range(2, nro):\n",
+    "            if nro % i == 0:\n",
+    "                es_primo = False\n",
+    "                break\n",
+    "        return es_primo\n",
+    "\n",
+    "    def valor_modal(self,lista):\n",
+    "        lista_unicos = []\n",
+    "        lista_repeticiones = []\n",
+    "        if len(lista) == 0:\n",
+    "            return None\n",
+    "        for elemento in lista:\n",
+    "            if elemento in lista_unicos:\n",
+    "                i = lista_unicos.index(elemento)\n",
+    "                lista_repeticiones[i] += 1\n",
+    "            else:\n",
+    "                lista_unicos.append(elemento)\n",
+    "                lista_repeticiones.append(1)\n",
+    "        moda = lista_unicos[0]\n",
+    "        maximo = lista_repeticiones[0]\n",
+    "        for i, elemento in enumerate(lista_unicos):\n",
+    "            if lista_repeticiones[i] > maximo:\n",
+    "                moda = lista_unicos[i]\n",
+    "                maximo = lista_repeticiones[i]\n",
+    "        return moda, maximo\n",
+    "\n",
+    "    def conversion_grados(self, valor, origen, destino):\n",
+    "        valor_destino = None\n",
+    "        if (origen == 'celsius'):\n",
+    "            if (destino == 'celsius'):\n",
+    "                valor_destino = valor\n",
+    "            elif (destino == 'farenheit'):\n",
+    "                valor_destino = (valor * 9 / 5) + 32\n",
+    "            elif (destino == 'kelvin'):\n",
+    "                valor_destino = valor + 273.15\n",
+    "            else:\n",
+    "                print('Parámetro de Destino incorrecto')\n",
+    "        elif (origen == 'farenheit'):\n",
+    "            if (destino == 'celsius'):\n",
+    "                valor_destino = (valor - 32) * 5 / 9\n",
+    "            elif (destino == 'farenheit'):\n",
+    "                valor_destino = valor\n",
+    "            elif (destino == 'kelvin'):\n",
+    "                valor_destino = ((valor - 32) * 5 / 9) + 273.15\n",
+    "            else:\n",
+    "                print('Parámetro de Destino incorrecto')\n",
+    "        elif (origen == 'kelvin'):\n",
+    "            if (destino == 'celsius'):\n",
+    "                valor_destino = valor - 273.15\n",
+    "            elif (destino == 'farenheit'):\n",
+    "                valor_destino = ((valor - 273.15) * 9 / 5) + 32\n",
+    "            elif (destino == 'kelvin'):\n",
+    "                valor_destino = valor\n",
+    "            else:\n",
+    "                print('Parámetro de Destino incorrecto')\n",
+    "        else:\n",
+    "            print('Parámetro de Origen incorrecto')\n",
+    "        return valor_destino\n",
+    "\n",
+    "    def factorial(self, numero):\n",
+    "        if(type(numero) != int):\n",
+    "            return 'El numero debe ser un entero'\n",
+    "        if(numero < 0):\n",
+    "            return 'El numero debe ser pisitivo'\n",
+    "        if (numero > 1):\n",
+    "            numero = numero * self.factorial(numero - 1)\n",
+    "        return numero\n"
+   ]
   },
   {
    "attachments": {},
@@ -103,10 +284,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "h = Herramientas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h.verifica_primo(7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8, 2)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "listado = [1,8,2,5,4,8,10,7]\n",
+    "h.valor_modal(listado)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h.factorial(5)"
+   ]
   },
   {
    "attachments": {},
@@ -118,10 +362,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Herramientas:\n",
+    "    def __init__(self, lista_numeros):\n",
+    "        self.lista= lista_numeros\n",
+    "        \n",
+    "\n",
+    "    def verifica_primo(self):\n",
+    "        for i in self.lista:\n",
+    "            if (self._verifica_primo(i)):\n",
+    "                print('El elemento', i, 'Si es un numero primo')\n",
+    "            else:\n",
+    "                print('El elemento', i, 'No es un numero primo')\n",
+    "    def conversion_grados(self, origen, destino):\n",
+    "        for i in self.lista:\n",
+    "            print(i, 'Grados', origen, 'son', self._conversion_grados(i,origen,destino), 'grados', destino)\n",
+    "\n",
+    "    def factorial(self):\n",
+    "        for i in self.lista:\n",
+    "            print('El factorial de ', i, 'es', self._factorial(i))\n",
+    "\n",
+    "    def _verifica_primo(self, nro):\n",
+    "        es_primo = True\n",
+    "        for i in range(2, nro):\n",
+    "            if nro % i == 0:\n",
+    "                es_primo = False\n",
+    "                break\n",
+    "        return es_primo\n",
+    "\n",
+    "    def valor_modal(self,menor):\n",
+    "        lista_unicos = []\n",
+    "        lista_repeticiones = []\n",
+    "        if len(self.lista) == 0:\n",
+    "            return None\n",
+    "        for elemento in self.lista:\n",
+    "            if elemento in lista_unicos:\n",
+    "                i = lista_unicos.index(elemento)\n",
+    "                lista_repeticiones[i] += 1\n",
+    "            else:\n",
+    "                lista_unicos.append(elemento)\n",
+    "                lista_repeticiones.append(1)\n",
+    "        moda = lista_unicos[0]\n",
+    "        maximo = lista_repeticiones[0]\n",
+    "        for i, elemento in enumerate(lista_unicos):\n",
+    "            if lista_repeticiones[i] > maximo:\n",
+    "                moda = lista_unicos[i]\n",
+    "                maximo = lista_repeticiones[i]\n",
+    "        return moda, maximo\n",
+    "\n",
+    "    def _conversion_grados(self, valor, origen, destino):\n",
+    "        valor_destino = None\n",
+    "        if (origen == 'celsius'):\n",
+    "            if (destino == 'celsius'):\n",
+    "                valor_destino = valor\n",
+    "            elif (destino == 'farenheit'):\n",
+    "                valor_destino = (valor * 9 / 5) + 32\n",
+    "            elif (destino == 'kelvin'):\n",
+    "                valor_destino = valor + 273.15\n",
+    "            else:\n",
+    "                print('Parámetro de Destino incorrecto')\n",
+    "        elif (origen == 'farenheit'):\n",
+    "            if (destino == 'celsius'):\n",
+    "                valor_destino = (valor - 32) * 5 / 9\n",
+    "            elif (destino == 'farenheit'):\n",
+    "                valor_destino = valor\n",
+    "            elif (destino == 'kelvin'):\n",
+    "                valor_destino = ((valor - 32) * 5 / 9) + 273.15\n",
+    "            else:\n",
+    "                print('Parámetro de Destino incorrecto')\n",
+    "        elif (origen == 'kelvin'):\n",
+    "            if (destino == 'celsius'):\n",
+    "                valor_destino = valor - 273.15\n",
+    "            elif (destino == 'farenheit'):\n",
+    "                valor_destino = ((valor - 273.15) * 9 / 5) + 32\n",
+    "            elif (destino == 'kelvin'):\n",
+    "                valor_destino = valor\n",
+    "            else:\n",
+    "                print('Parámetro de Destino incorrecto')\n",
+    "        else:\n",
+    "            print('Parámetro de Origen incorrecto')\n",
+    "        return valor_destino\n",
+    "\n",
+    "    def _factorial(self, numero):\n",
+    "        if(type(numero) != int):\n",
+    "            return 'El numero debe ser un entero'\n",
+    "        if(numero < 0):\n",
+    "            return 'El numero debe ser pisitivo'\n",
+    "        if (numero > 1):\n",
+    "            numero = numero * self.factorial(numero - 1)\n",
+    "        return numero"
+   ]
   },
   {
    "attachments": {},
@@ -133,10 +466,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from herrmientas_ejemplo import *\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h2 = Herramientas([1,1,2,3,5,6,8,8])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El elemento 1 Si es un numero primo\n",
+      "El elemento 1 Si es un numero primo\n",
+      "El elemento 2 Si es un numero primo\n",
+      "El elemento 3 Si es un numero primo\n",
+      "El elemento 5 Si es un numero primo\n",
+      "El elemento 6 No es un numero primo\n",
+      "El elemento 8 No es un numero primo\n",
+      "El elemento 8 No es un numero primo\n"
+     ]
+    }
+   ],
+   "source": [
+    "h2.verifica_primo()"
+   ]
   }
  ],
  "metadata": {
@@ -158,7 +526,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
